@@ -261,8 +261,6 @@ class fuse_tests(TestCase):
     # TODO: test cp.s3ql
 
 
-# TODO: test tune.s3ql
-
 
 # Somehow important according to pyunit documentation
 def suite():
